rename schemas on engine API
